--- a/templates/panel_group_edit_promotions.html
+++ b/templates/panel_group_edit_promotions.html
@@ -57,6 +57,10 @@
 			<div class="formitem formlabel"><a>{{lang "panel_group_promotions_level"}}</a></div>
 			<div class="formitem"><input name="level" type="number" value=0 /></div>
 		</div>
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_group_promotions_posts"}}</a></div>
+			<div class="formitem"><input name="posts" type="number" value=0 /></div>
+		</div>
 		<div class="formrow form_button_row">
 			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_group_promotions_create_button"}}</button></div>
 		</div>
