Update the group promotion UI. Invert the direction of the query to make promotions a little less exacting. Make sure admins can't set the from group as the to group in a group promotion. Shorten a field name in the word filter manager.
Add panel_group_promotions_level_prefix phrase.
Add panel_group_promotions_posts_prefix phrase.
Add panel_group_promotions_delete_button phrase.

--- a/templates/panel_group_edit_promotions.html
+++ b/templates/panel_group_edit_promotions.html
@@ -11,9 +11,10 @@
 		{{range .Promotions}}
 		<div class="rowitem">
 			<a href="#p-{{.ID}}">{{.FromGroup.Name}} -> {{.ToGroup.Name}}{{if .TwoWay}} (two way){{end}}</a>
-			<span>&nbsp;-&nbsp;level {{.Level}}</span>
+			{{if .Level}}<span>&nbsp;-&nbsp;{{lang "panel_group_promotions_level_prefix"}}{{.Level}}</span>{{end}}
+			{{if .Posts}}<span>&nbsp;-&nbsp;{{lang "panel_group_promotions_posts_prefix"}}{{.Posts}}</span>{{end}}
 			<div class="to_right">
-				<a href="/panel/groups/promotions/delete/submit/{{$.ID}}-{{.ID}}?s={{$.CurrentUser.Session}}"><button form="nn">Delete</button></a>
+				<a href="/panel/groups/promotions/delete/submit/{{$.ID}}-{{.ID}}?s={{$.CurrentUser.Session}}"><button form="nn">{{lang "panel_group_promotions_delete_button"}}</button></a>
 			</div>
 		</div>{{end}}
 		<div class="rowitem">
