--- a/templates/panel_word_filters.html
+++ b/templates/panel_word_filters.html
@@ -6,7 +6,7 @@
 	<div class="rowitem panel_compactrow editable_parent">
 		<a data-field="find" data-type="text" href="/panel/settings/word-filters/edit/{{.ID}}" class="editable_block panel_upshift edit_fields filter_find">{{.Find}}</a>
 		<span class="itemSeparator"></span>
-		<a data-field="replacement" data-type="text" class="editable_block panel_compacttext filter_replace">{{.Replacement}}</a>
+		<a data-field="replace" data-type="text" class="editable_block panel_compacttext filter_replace">{{.Replacement}}</a>
 		<span class="panel_buttons">
 			<a class="panel_tag edit_fields hide_on_edit panel_right_button edit_button" aria-label="{{lang "panel_word_filters_edit_button_aria"}}"></a>
 			<a class="panel_right_button show_on_edit" href="/panel/settings/word-filters/edit/submit/{{.ID}}"><button class='panel_tag submit_edit' type='submit'>{{lang "panel_word_filters_update_button"}}</button></a>
@@ -31,7 +31,7 @@
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_word_filters_create_replacement"}}</a></div>
-			<div class="formitem"><input name="replacement" type="text" placeholder="{{lang "panel_word_filters_create_replacement_placeholder"}}" /></div>
+			<div class="formitem"><input name="replace" type="text" placeholder="{{lang "panel_word_filters_create_replacement_placeholder"}}" /></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_word_filters_create_button"}}</button></div>
