Fix a bug where the convos page would 404. Friendly message when there are no convos. Fix the convo input css. Hide elapsed on mobile for Nox.
Added convos_none phrase.

--- a/templates/convos.html
+++ b/templates/convos.html
@@ -31,6 +31,8 @@
 		</span>
 		<span title="{{abstime .LastReplyAt}}" class="to_right">{{reltime .LastReplyAt}}</span>
 		<div style="clear:both;"></div>
-	</div>{{end}}
+	</div>{{else}}
+	<div class="rowitem">{{lang "convos_none"}}</div>
+	{{end}}
 </div>
 {{template "paginator.html" . }}
