--- a/themes/nox/public/convo.css
+++ b/themes/nox/public/convo.css
@@ -55,3 +55,13 @@
 .content_column {
 	margin-top: 5px;
 }
+
+.topic_reply_form {
+	margin-top: 8px;
+	padding: 12px;
+}
+.input_content {
+	width: 100%;
+	height: 100px;
+	resize: vertical;
+}
