Wrestling with tests while pushing random changes.

--- a/templates/panel_forums.html
+++ b/templates/panel_forums.html
@@ -37,22 +37,22 @@
 	<form action="/panel/forums/create/?s={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel.forums_create_name_label"}}</a></div>
-			<div class="formitem"><input name="forum-name" type="text" placeholder="{{lang "panel.forums_create_name"}}" /></div>
+			<div class="formitem"><input name="name" type="text" placeholder="{{lang "panel.forums_create_name"}}" /></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel.forums_create_description_label"}}</a></div>
-			<div class="formitem"><input name="forum-desc" type="text" placeholder="{{lang "panel.forums_create_description"}}" /></div>
+			<div class="formitem"><input name="desc" type="text" placeholder="{{lang "panel.forums_create_description"}}" /></div>
 		</div>
 		<div class="formrow">
 		<div class="formitem formlabel"><a>{{lang "panel.forums_active_label"}}</a></div>
-			<div class="formitem"><select name="forum-active">
+			<div class="formitem"><select name="active">
 				<option selected value="1">{{lang "option_yes"}}</option>
 				<option value="0">{{lang "option_no"}}</option>
 			</select></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel.forums_preset_label"}}</a></div>
-			<div class="formitem"><select name="forum-preset">
+			<div class="formitem"><select name="preset">
 				<option selected value="all">{{lang "panel_preset_everyone"}}</option>
 				<option value="announce">{{lang "panel_preset_announcements"}}</option>
 				<option value="members">{{lang "panel_preset_member_only"}}</option>
