Rudimentary user convo blocking. Simplify some things.
Add create_block title phrase.
Add remove_block title phrase.
Add create_block_msg phrase.
Add remove_block_msg phrase.
Add profile_unblock phrase.

Add the users_blocks table.

You will need to run the updater / patcher for this commit.

--- a/templates/are_you_sure.html
+++ b/templates/are_you_sure.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<main>
+<main id="are_you_sure">
 	<div class="rowblock rowhead">
 		<div class="rowitem"><h1>{{lang "areyousure_head"}}</h1></div>
 	</div>
